samples/_failures_safe/1761301619_5c37d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c06feab.c: In function ‘main’:
./samples/SAFE/__tmp_8c06feab.c:176:15: error: expected ‘;’ at end of input
  176 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_8c06feab.c:176:9: error: expected declaration or statement at end of input
  176 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_8c06feab.c:176:9: error: expected declaration or statement at end of input
